Fix ConfigManager crashing (appdata doest exit on linux)